# Computacional_Inteligence-Neural_Networks

./: CMakeLists.txt  Main.cpp  Number.cpp  Number.hpp  README.md
program/: CMakeLists.txt  Main.cpp
program/notPOO/: notPOO-ex2.c  notPOO-ex3.c  notPOO.c  patterns.c
